--- a/city-guide.qmd
+++ b/city-guide.qmd
@@ -5,3 +5,8 @@ editor: visual
 ---
 
 Welcome! This is a city guide to Hamburg and Rotterdam.
+
+# Best cinemas in Hamburg
+
+-   [Abaton Kino](https://www.abaton.de/page.pl?index)
+-   [Passage-Kino](https://www.das-passage.de)
