--- a/city-guide.qmd
+++ b/city-guide.qmd
@@ -12,3 +12,7 @@ Welcome! This is a city guide to Hamburg and Rotterdam.
 
 -   [Abaton Kino](https://www.abaton.de/page.pl?index)
 -   [Passage-Kino](https://www.das-passage.de)
+
+# Ideal places for a fun night out in Hamburg
+
+-   Christmas market Santa Pauli
