added relaxation location to partner's guide

--- a/city-guide.qmd
+++ b/city-guide.qmd
@@ -33,4 +33,8 @@ Welcome! This is a city guide to Hamburg and Rotterdam.
 
 # Places to avoid in Hamburg
 
-- Espresso house, not cozy, bad coffee
+-   Espresso house, not cozy, bad coffee going out to welllness sauna really comes you down in Hamburg
+
+**Places to relax in Hamburg**
+
+-   Shopping in the Europa passage, sitting at starbucks coffeeshop there, visiting a wellness location
