Fixed formatting in city-guide.qmd

--- a/city-guide.qmd
+++ b/city-guide.qmd
@@ -35,6 +35,7 @@ Welcome! This is a city guide to Hamburg and Rotterdam.
 
 -   Espresso house, not cozy, bad coffee going out to welllness sauna really comes you down in Hamburg
 
-**Places to relax in Hamburg**
+# Places to relax in Hamburg
 
--   Shopping in the Europa passage, sitting at starbucks coffeeshop there, visiting a wellness location
+-   Shopping in the Europa passage, sitting at starbucks coffeeshop there
+-   Visiting a Spa
